--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{% block title %} Yeah!{% endblock %}</title>
+        <!-- CSS only -->
+        <link rel="stylesheet" href="{{ asset('Css/normalize.css') }}">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+        <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ asset('Css/styles.css') }}">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        {# DEBUT HEADER #}
+        <header>
+                <div>
+                    <a href="{{ path('home') }}" title="Accueil du site"><img src="#" alt="Logo Yeah!"></a>
+                </div>
+                <button>Créer une publication</button>
+                <h1>Le réseau social des professionnels</h1>
+
+                <nav>
+                    <a href="" title="">
+                        <i class="las la-heart"></i>
+                        <span>favoris</span>
+                    </a>
+                    <a href="" title="">
+                        <i class="las la-search"></i>
+                        <span>recherche</span>
+                    </a>
+                    <a href="" title="">
+                        <i class="las la-envelope"></i>
+                        <span>message</span>
+                    </a>
+                    <a href="" title="">
+                        <i class="las la-user"></i>
+                        <span>se connecter</span>
+                    </a>
+                </nav>        
+        </header>
+        {# FIN HEADER #}
+
         {% block body %}{% endblock %}
+
+        {# DEBUT FOOTER #}
+
+        {# FIN FOOTER #}
+
+        <!-- JS, Popper.js, and jQuery -->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
