--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,18 +3,28 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<main class="container-fluid">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/buisnessToBuisness/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/buisnessToBuisness/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
+
+
+        <div class="row py-0">
+            {{ knp_pagination_render(announcements) }}
+        </div>  
+
+        <div class="row">
+            {% set col = 3 %}
+
+            {% for announcement in announcements %} 
+                {{ include('home/_listAnnouncements.html.twig') }}
+            {% endfor %}
+        </div>
+
+        <div class="row py-0">
+            {{ knp_pagination_render(announcements) }}
+        </div>    
+
+
+
+	</main>
 {% endblock %}
