--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,95 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %} Yeah! - Accueil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <main>
+        <div>
+            <!--Présentation entreprise-->
+            <section>
+                <h1>Plateforme d’affaires et d’opportunités commerciales</h1>
+                <p>yeah.io simplifie la mise en relation entre l’offre et la demande. Vous pouvez inscrire votre entreprise, répondre à des devis, trouver des nouveaux prospects, développer votre chiffre d’affaire, faire connaitre votre savoir-faire ou encore rechercher un prestataire, déposer une offre de stage ou d’emploi...</p>
+                <p class="pinkText">Devenez apporteur d’affaire en postant une opportunité commerciale précise et recevez en contrepartie des €, des bons cadeaux ou des bons de réductions.</p>
+                <button type="button" class="btn pinkBackground">Créer une publication</button>
+            </section>
+            <!-- Fin Présentation entreprise-->
+    
+            <!--Liste entreprises-->
+            <section>
+            <!--Barre de recherche-->
+                <div class="search_filter"> 
+                    <div class="search_bar">
+                        <div>
+                            <input type="text" placeholder="Que recherchez-vous ?">
+                        </div> 
+                        <div>
+                            <select name="categoryFilter" id="categoryFilter">
+                                <option value="">Catégorie</option>
+                            </select>
+                        </div>
+                        <div>
+                            <select name="locationFilter" id="locationFilter">
+                                <option value="">Où</option>
+                            </select>
+                        </div>
+                        <div>
+                            <select name="adTypeFilter" id="adTypeFilter">
+                                <option value="">Type d'annonces ?</option>
+                            </select>
+                        </div>
+                        <div>
+                            <button type="button" class=" btn violetBackground">C'est parti</button>        
+                        </div>
+                    </div>
+                    <div>
+                        <button class="sortByButton">Trier par<i class="las la-sort-amount-down"></i></button>
+                    </div>
+                </div>
+            <!--Fin Barre de recherche-->
+    
+            <!--Bloc Carte entreprise-->
+                <div class="card">
+                    <div>
+                        <img src="" alt="">
+                    </div>
+    
+                    <div>
+                        <div>Recherche prestataire</div>
+                        <div class="card_title">Création de charte graphique</div>
+                        <div class="card_text">Une entreprise recherche un graphiste afi n defi naliser sa charte graphique, typographie et sonlogo</div>
+                        <div class="card_text">Annonce 000-000</div>
+                        <div>#graphisme #motsclés</div>
+                    </div>
+    
+                    <div>
+                        <div>
+                            <div>Localisation</div>
+                            <div>Date</div>
+                            <div>Telephone</div>
+                            <div>Mail</div>
+                            <div>Tarif</div>
+                        </div>
+    
+                        <div class="buttonList">
+                            <button type="button" class=" btn darkGreyBackground">Partager</button>
+                            <button type="button" class=" btn darkGreyBackground">Enregistrer</button>
+                            <button type="button" class=" btn darkGreyBackground">Recommander</button>
+                            <button type="button" class=" btn lightGreyBackground">Contrepartie</button>
+                            <button type="button" class=" btn violetBackground">Répondre</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--Fin Liste entreprises-->
+        </div>
+        <!--Fin Bloc Carte entreprise-->    
+    
+        <!--Carte-->
+        <div>
+            <!--Intégration Carte-->
+        </div>
+        <!--Fin carte-->
+      
+    </main>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/laragon/www/buisnessToBuisness/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/laragon/www/buisnessToBuisness/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
