--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,6 +4,15 @@
 
 {% block body %}
 <form method="post">
+
+    {% for message in app.flashes('success') %}
+       <div class="alert alert-success" role="alert">{{ message }}</div>
+    {% endfor %}
+
+    {% for message in app.flashes('verify_email_error') %}
+       <div class="alert alert-danger" role="alert">{{ message }}</div>
+    {% endfor %}
+
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
