--- a/templates/admin/users/index.html.twig
+++ b/templates/admin/users/index.html.twig
@@ -8,29 +8,23 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Email</th>
                 <th>Roles</th>
-                <th>Password</th>
                 <th>Firstname</th>
                 <th>Lastname</th>
-                <th>Phone</th>
                 <th>actions</th>
             </tr>
         </thead>
         <tbody>
         {% for user in users %}
             <tr>
-                <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
                 <td>{{ user.firstname }}</td>
                 <td>{{ user.lastname }}</td>
-                <td>{{ user.phone }}</td>
                 <td>
-                    <a href="{{ path('users_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('users_edit', {'id': user.id}) }}">edit</a>
+                    <a href="{{ path('admin_users_show', {'slug': user.slug}) }}">Voir</a>
+                    <a href="#">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -41,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('users_new') }}">Create new</a>
+    <a href="{{ path('admin_users_new') }}">Create new</a>
 {% endblock %}
