AnnouncementsType : work in progress

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,6 +11,7 @@
                 <p>yeah.io simplifie la mise en relation entre l’offre et la demande. Vous pouvez inscrire votre entreprise, répondre à des devis, trouver des nouveaux prospects, développer votre chiffre d’affaire, faire connaitre votre savoir-faire ou encore rechercher un prestataire, déposer une offre de stage ou d’emploi...</p>
                 <p class="pinkText">Devenez apporteur d’affaire en postant une opportunité commerciale précise et recevez en contrepartie des €, des bons cadeaux ou des bons de réductions.</p>
                 <button type="button" class="btn pinkBackground">Créer une publication</button>
+                <a href="{{ path('home_new') }}" type="button" class="btn pinkBackground">Créer une publication</a>
             </section>
             <!-- Fin Présentation entreprise-->
     
