login/register/env

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Inscription</h1>
-    {{ form(registrationForm) }}
+   <div class="w-50 mx-auto">
+    <h1 class="mb-3 font-weight-normal text-center">Inscription</h1>  
+        {{ form(registrationForm) }}            
+    </div>
 {% endblock %}
