--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,49 +3,51 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
+
+<form method="post" class="w-50 mx-auto">
 
     {% for message in app.flashes('success') %}
-       <div class="alert alert-success" role="alert">{{ message }}</div>
+        <div class="alert alert-success" role="alert">{{ message }}</div>
     {% endfor %}
 
     {% for message in app.flashes('verify_email_error') %}
-       <div class="alert alert-danger" role="alert">{{ message }}</div>
+        <div class="alert alert-danger" role="alert">{{ message }}</div>
     {% endfor %}
 
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+    <h1 class="mb-3 font-weight-normal text-center">Connexion</h1>
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
+    <label for="inputEmail">Adresse e-mail</label>
+    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" required autofocus>
+    <label for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+    <div class="checkbox my-3">
+        <label>
+            <input type="checkbox" name="_remember_me"> Se souvenir de moi
+        </label>
+    </div>
+    <div class="col text-center">
+        <button class="btn bouton" type="submit">
+        Se connecter
+        </button>
+    </div>
 </form>
+
+<div class="w-50 mx-auto my-5">
+    <h1 class="mb-3 font-weight-normal text-center">Nouveau client ?</h1>
+    
+    <div class="col text-center">
+        <button class="btn bouton" type="submit">
+            <a href="{{ path('app_register') }}">S'inscrire</a>
+        </button>
+    </div>
+</div>
+
+
 {% endblock %}
