mise en forme des formulaires login/register

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,51 +3,52 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
+<div class="w-100 mx-auto fond">
 
-<form method="post" class="w-50 mx-auto">
+    <form method="post" class="w-50 mx-auto">
 
-    {% for message in app.flashes('success') %}
-        <div class="alert alert-success" role="alert">{{ message }}</div>
-    {% endfor %}
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success" role="alert">{{ message }}</div>
+        {% endfor %}
 
-    {% for message in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ message }}</div>
-    {% endfor %}
+        {% for message in app.flashes('verify_email_error') %}
+            <div class="alert alert-danger" role="alert">{{ message }}</div>
+        {% endfor %}
 
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    <h1 class="mb-3 font-weight-normal text-center">Connexion</h1>
+        <h1 class="mb-3 font-weight-normal text-center">Connexion</h1>
 
-    <label for="inputEmail">Adresse e-mail</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+        <label for="inputEmail" class="policeForm">Adresse e-mail</label>
+        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" required autofocus>
+        <label for="inputPassword" class="policeForm">Mot de passe</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" required>
 
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    <div class="checkbox my-3">
-        <label>
-            <input type="checkbox" name="_remember_me"> Se souvenir de moi
-        </label>
-    </div>
-    <div class="col text-center">
-        <button class="btn bouton" type="submit">
-        Se connecter
-        </button>
-    </div>
-</form>
+        <div class="checkbox my-3">
+            <label>
+                <input type="checkbox" name="_remember_me" class=" mr-2"> Se souvenir de moi
+            </label>
+        </div>
+        <div class="col text-center">
+            <button class="btn pinkText" type="submit">  Se connecter</button>
+        </div>
+    </form>
 
-<div class="w-50 mx-auto my-5">
-    <h1 class="mb-3 font-weight-normal text-center">Nouveau client ?</h1>
-    
-    <div class="col text-center">
-        <button class="btn bouton" type="submit">
-            <a href="{{ path('app_register') }}">S'inscrire</a>
-        </button>
+    <div class="w-50 mx-auto my-5">
+        <h1 class="mb-3 font-weight-normal text-center">Nouveau client ?</h1>
+        
+        <div class="col text-center">
+            <button class="btn bouton" type="submit">
+                <a href="{{ path('app_register') }}" class="pinkText">S'inscrire</a>
+            </button>
+        </div>
     </div>
 </div>
+
 
 
 {% endblock %}
