formulaires inscrip/connect normalement terminé

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -117,6 +117,9 @@ main section p{
     color: #fb3199;
     font-weight: bold;
 }
+.blackText{
+    color: black;
+}
 
 main button {
     width: 60%;
@@ -204,6 +207,10 @@ main button {
   }
   .fond > .formulaire > button{
       color: #ebf2e3;
+  }
+  .titre{
+      font-size: 2rem;
+      color: #6b40a1;
   }
   
 /* Fin Page register and login */
