--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,7 +6,7 @@
 
    <div class="w-100 mx-auto fond">
         <div class="w-50 mx-auto formulaire">
-            <h1 class="mb-3 font-weight-normal text-center">Inscription</h1>  
+            <h1 class="font-weight-normal text-center titre mb-4 pt-4">Inscription</h1>  
             {{ form_start(registrationForm) }}
             {{ form_row(registrationForm.firstname) }}
             {{ form_row(registrationForm.lastname) }}
@@ -15,8 +15,10 @@
             {{ form_row(registrationForm.plainPassword) }}
             {{ form_row(registrationForm.agreeTerms) }}
             {# {{ form_row(registrationForm.valider) }} #}
-            <button class="btn pinkBackground" type="submit">S'inscrire </button>
+            <div class="text-center">
+            <button class="btn pinkBackground mb-4 mt-4" type="submit">S'inscrire </button>
             {{ form_end(registrationForm) }}
+            </div>
         </div>
     </div>
 {% endblock %}
