--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,7 +19,7 @@
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
 
-        <h1 class="mb-3 font-weight-normal text-center">Connexion</h1>
+        <h1 class=" titre mb-4 pt-4 font-weight-normal text-center">Connexion</h1>
 
         <label for="inputEmail" class="policeForm">Adresse e-mail</label>
         <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" required autofocus>
@@ -28,22 +28,26 @@
 
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-        <div class="checkbox my-3">
+        <div class="checkbox mt-3">
             <label>
                 <input type="checkbox" name="_remember_me" class=" mr-2"> Se souvenir de moi
             </label>
+            
+        </div>
+        <div >
+            <a href="#" class="blackText">Mot de passe oublié ?</a>
         </div>
         <div class="col text-center">
-            <button class="btn pinkText" type="submit">  Se connecter</button>
+            <button class="btn pinkBackground" type="submit">  Se connecter</button>
         </div>
     </form>
 
-    <div class="w-50 mx-auto my-5">
-        <h1 class="mb-3 font-weight-normal text-center">Nouveau client ?</h1>
+    <div class="  w-50 mx-auto my-5">
+        <h1 class="titre mb-4 font-weight-normal text-center">Nouveau client ?</h1>
         
         <div class="col text-center">
             <button class="btn bouton" type="submit">
-                <a href="{{ path('app_register') }}" class="pinkText">S'inscrire</a>
+                <a href="{{ path('app_register') }}" class=" btn pinkBackground mb-4">S'inscrire</a>
             </button>
         </div>
     </div>
