--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -85,7 +85,7 @@
                     {{ include('home/_listAnnouncements.html.twig') }}
                 {% endfor %}
 
-                <div class="pagination">
+                <div>
                 {{ knp_pagination_render(announcements) }}
                 </div>
                 <!--Fin Bloc Carte entreprise-->
