--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -143,9 +143,15 @@ main section p{
 }
 
  .sortByButton{
+     background-color: white;
      margin: 25px 0 10px;
+     padding: 5px;
      border-radius: 5px;
-     border: 1px solid #6f7176;
+     border: none;
+}
+
+.sortByButton i {
+    margin: 0 3px;
 }
 
 /*Carte annonce*/
@@ -164,7 +170,7 @@ main section p{
     display: inline;
     padding: 3px 10px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .card_title{
@@ -174,7 +180,7 @@ main section p{
 }
 
 .card_announcement{
-    margin-top: 60px;
+    margin-top: 30px;
     margin-bottom: 10px;
 }
 
@@ -206,6 +212,8 @@ main section p{
 .buttonList .button {
     font-weight: 700;
     margin-bottom: 5px;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 /*Fin Carte annonce*/
 
