--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,7 +6,7 @@
 
    <div class="w-100 mx-auto fond">
         <div class="w-50 mx-auto formulaire">
-            <h1 class="font-weight-normal text-center titre mb-4 pt-4">Inscription</h1>  
+            <h1 class="text-center titre mb-4 pt-4">Yeah-Inscription</h1>  
             {{ form_start(registrationForm) }}
             {{ form_row(registrationForm.firstname) }}
             {{ form_row(registrationForm.lastname) }}
