form new article qui avance

--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -24,13 +24,15 @@
     </div>
 
 
-
-
     {{ form_end(form) }}
+
+
+
 
 {% endblock %}
 {% block javascripts %}
     {# js pour affichage des curseurs (gamme de budget) #}
     <script src="{{ asset('js/sliderBudget.js') }}"></script>
+    <script src="{{ asset('js/selectAutoComplete.js') }}"></script>
 
 {% endblock %}
