--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -19,7 +19,7 @@
                     </small>
                 </div>
 
-                <button class="btn pinkBackground mb-4 mt-4">Envoyer un e-mail de réinitialisation du mot de passe</button>
+                <button class="btn pinkBackground mb-4 mt-4">Envoyer un e-mail de rénitialisation du mot de passe</button>
             {{ form_end(requestForm) }}
     </div
  </div>
